--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
     "name": "JuerGenie",
     "email": "juergenie@qq.com"
   },
+  "keywords": [
+    "@vue/reactivity",
+    "vue",
+    "vue3",
+    "idb",
+    "idb-keyval",
+    "indexeddb"
+  ],
   "homepage": "https://github.com/juergenie/idb-reactive",
   "license": "MIT",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "type": "module",
   "exports": {
     ".": {
