--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "idb-reactive",
+  "license": "MIT",
+  "version": "0.2.1",
   "private": false,
   "author": {
     "name": "JuerGenie",
     "email": "juergenie@qq.com"
   },
+  "homepage": "https://github.com/juergenie/idb-reactive",
   "keywords": [
     "@vue/reactivity",
     "vue",
@@ -13,9 +16,6 @@
     "idb-keyval",
     "indexeddb"
   ],
-  "homepage": "https://github.com/juergenie/idb-reactive",
-  "license": "MIT",
-  "version": "0.1.3",
   "type": "module",
   "exports": {
     ".": {
@@ -38,20 +38,19 @@
     "@types/node": "^18.11.19",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue/runtime-core": "^3.2.47",
+    "idb-keyval": "^6.2.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-dts": "^1.7.2",
-    "vue": "^3.2.47",
-    "@vue/reactivity": "^3.2.47",
-    "@vue/runtime-core": "^3.2.47",
-    "idb-keyval": "^6.2.0"
+    "vue": "^3.2.47"
   },
   "peerDependencies": {
-    "@vue/reactivity": "^3.2.47",
     "@vue/runtime-core": "^3.2.47",
     "idb-keyval": "^6.2.0"
   },
   "dependencies": {
+    "@vueuse/shared": "^9.12.0",
     "lodash": "^4.17.21"
   }
 }
